tests/integration/records/errors/annotation-is-checked/main.cx
let c: {} = _unsafe_js("console")
fun main() {
    c.log("Hoop")
}
